objects/Intranet_Container__c.object
<CustomObject>
    <description>Content Block which contains Content Items</description>
    <fields>
        <fullName>Container_Level__c</fullName>
        <formula>IF(RecordType.Name = &apos;Header&apos;,
  &apos;Header&apos;,
  IF(RecordType.Name = &apos;Footer&apos;,
    &apos;Footer&apos;,
    IF(AND(RecordType.Name = &apos;Page&apos;, ISBLANK(Parent_Container__c)),
      &apos;MainPage&apos;,
      IF(AND(RecordType.Name = &apos;Page&apos;, NOT(ISBLANK(Parent_Container__c))),
        &apos;PageBlock&apos;,
        IF(AND(RecordType.Name != &apos;Page&apos;, ISBLANK(Parent_Container__c)),
          &apos;Orphan&apos;,
          &apos;Child&apos;)
      )
    )
  )
)</formula>
        <inlineHelpText>Type of Container by Level</inlineHelpText>
        <label>Container Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Container_Type__c</fullName>
        <label>Container Type</label>
        <picklist>
            <picklistValues>
                <fullName>ABC Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABC Today</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABC TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firm Initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flexible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Footer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Header</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Menu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News Carousel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page Actions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page Bookmarks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page Section</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QuickLinks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SubContainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Status</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_Types_Allowed_Text__c</fullName>
        <description>Used on Intranet Schedule to limit content by Item Type</description>
        <inlineHelpText>Text version of Content Types Allowed multi-select picklists</inlineHelpText>
        <label>Content Types Allowed Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Types_Allowed__c</fullName>
        <label>Content Types Allowed</label>
        <picklist>
            <picklistValues>
                <fullName>Ad Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birthdays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Component Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firm App Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Image Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page Section</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poll Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quick Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Talent Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trending - Advisory.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trending - EAB.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trending - Ideas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weather</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page Link</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DPA_Score_Type__c</fullName>
        <inlineHelpText>Type of DPA calculation to perform determines which elements are part of the calculation</inlineHelpText>
        <label>DPA Score Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Default_Content_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Content to load when no other content is defined for the current day or user</inlineHelpText>
        <label>Default Content Item</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Intranet_Item__c.Active_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Intranet_Item__c.Item_Type__c</field>
                <operation>notEqual</operation>
                <value>Poll Item, ABC Trending Item, EAB Trending Item, Ideas Trending Item</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Intranet_Item__c</referenceTo>
        <relationshipLabel>Default for Containers</relationshipLabel>
        <relationshipName>Intranet_Containers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <inlineHelpText>Name used on page component and Content Viewer, if applicable</inlineHelpText>
        <label>Display Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Footer_Container__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Footer Container</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Intranet_Container__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Footer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Intranet_Container__c</referenceTo>
        <relationshipLabel>Pages with Footer</relationshipLabel>
        <relationshipName>Intranet_Containers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_SubContainers__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Includes Tabs or other sub-containers</inlineHelpText>
        <label>zzzHas Subcontainers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Header_Container__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Header Container</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Intranet_Container__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Header</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Intranet_Container__c</referenceTo>
        <relationshipLabel>Pages with Header</relationshipLabel>
        <relationshipName>Intranet_Containers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <inlineHelpText>Overall Height in pixels of Container</inlineHelpText>
        <label>Height</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Content_Update__c</fullName>
        <description>Used by a workflow to determine when to next update the contents of the container</description>
        <inlineHelpText>Timestamp of the last update of this container&apos;s content.  Applies to Trending or Weather Info.</inlineHelpText>
        <label>Last Content Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Layout_Type__c</fullName>
        <inlineHelpText>Determines which tab layout or basic style is used to display contents</inlineHelpText>
        <label>Layout Type</label>
        <picklist>
            <picklistValues>
                <fullName>Additional Links</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birthdays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Header Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weather</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Load_Id__c</fullName>
        <description>Reference Id for data loads</description>
        <externalId>true</externalId>
        <label>Load Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Content_Items__c</fullName>
        <label>Max Content Items</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Visible_Screen__c</fullName>
        <label>Minimum Visible Screen</label>
        <picklist>
            <picklistValues>
                <fullName>Desktop (1200 pixels)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laptop (992 pixels)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet  (768 pixels)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone (&lt;768 pixels)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Container__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Container</label>
        <referenceTo>Intranet_Container__c</referenceTo>
        <relationshipLabel>Sub Containers</relationshipLabel>
        <relationshipName>Intranet_Containers2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <displayFormat>IC-{00000000}</displayFormat>
        <label>Reference Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Screen_Priority__c</fullName>
        <inlineHelpText>Higher numbers &quot;stick&quot; longer.  &apos;0&apos; disappears on Mobile.</inlineHelpText>
        <label>zzzScreen Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Show_Expand_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Expand Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Feedback_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Feedback Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <inlineHelpText>Determines the order of tabs or menu item groups.</inlineHelpText>
        <label>Sort Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Top_Parent_Container_Id__c</fullName>
        <description>Used in Boardroom by a query to get all Containers related to a top level Page.</description>
        <formula>IF(NOT(ISBLANK(Parent_Container__r.Parent_Container__r.Parent_Container__r.Parent_Container__r.Parent_Container__c)),
  Parent_Container__r.Parent_Container__r.Parent_Container__r.Parent_Container__r.Parent_Container__c,
  IF(NOT(ISBLANK(Parent_Container__r.Parent_Container__r.Parent_Container__r.Parent_Container__c)),
    Parent_Container__r.Parent_Container__r.Parent_Container__r.Parent_Container__c,
    IF(NOT(ISBLANK(Parent_Container__r.Parent_Container__r.Parent_Container__c)),
      Parent_Container__r.Parent_Container__r.Parent_Container__c,
      IF(NOT(ISBLANK(Parent_Container__r.Parent_Container__c)),
        Parent_Container__r.Parent_Container__c,
        IF(NOT(ISBLANK(Parent_Container__c)),
          Parent_Container__c,
          Id
        )
      )
    )
  )
)</formula>
        <inlineHelpText>Top Parent Container, up to 5 levels deep</inlineHelpText>
        <label>Top Parent Container Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Parent_Container__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Top_Parent_Container_Id__c, &quot;Top Parent&quot;,&quot;_parent&quot;)</formula>
        <inlineHelpText>Link to Top Parent Container, up to 5 levels deep</inlineHelpText>
        <label>Top Parent Container</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Now__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set to TRUE to trigger the update of the Container&apos;s content now.  Applies to Trending or Weather Info.</inlineHelpText>
        <label>Update Now</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <inlineHelpText>Overall Width in pixels of Container</inlineHelpText>
        <label>Width</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Intranet Container</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Content_Types_Allowed__c</columns>
        <columns>Display_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Container_Type__c</columns>
        <columns>Parent_Container__c</columns>
        <columns>Container_Level__c</columns>
        <columns>Status__c</columns>
        <columns>Reference_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Content_Fixed</fullName>
        <columns>NAME</columns>
        <columns>Display_Name__c</columns>
        <columns>Container_Type__c</columns>
        <columns>Parent_Container__c</columns>
        <columns>Container_Level__c</columns>
        <columns>Status__c</columns>
        <columns>Reference_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Intranet_Container__c.Content_Fixed</value>
        </filters>
        <label>Content - Fixed</label>
    </listViews>
    <listViews>
        <fullName>Content_Flexible</fullName>
        <columns>NAME</columns>
        <columns>Display_Name__c</columns>
        <columns>Container_Type__c</columns>
        <columns>Parent_Container__c</columns>
        <columns>Container_Level__c</columns>
        <columns>Status__c</columns>
        <columns>Reference_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Intranet_Container__c.Content_Flexible</value>
        </filters>
        <label>Content - Flexible</label>
    </listViews>
    <listViews>
        <fullName>Content_Footer</fullName>
        <columns>NAME</columns>
        <columns>Display_Name__c</columns>
        <columns>Container_Type__c</columns>
        <columns>Parent_Container__c</columns>
        <columns>Container_Level__c</columns>
        <columns>Status__c</columns>
        <columns>Reference_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Intranet_Container__c.Footer</value>
        </filters>
        <label>Content - Footer</label>
    </listViews>
    <listViews>
        <fullName>Content_Header</fullName>
        <columns>NAME</columns>
        <columns>Display_Name__c</columns>
        <columns>Container_Type__c</columns>
        <columns>Parent_Container__c</columns>
        <columns>Container_Level__c</columns>
        <columns>Status__c</columns>
        <columns>Reference_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Intranet_Container__c.Header</value>
        </filters>
        <label>Content - Header</label>
    </listViews>
    <listViews>
        <fullName>Content_Page</fullName>
        <columns>NAME</columns>
        <columns>Display_Name__c</columns>
        <columns>Container_Type__c</columns>
        <columns>Parent_Container__c</columns>
        <columns>Container_Level__c</columns>
        <columns>Status__c</columns>
        <columns>Reference_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Intranet_Container__c.Page</value>
        </filters>
        <label>Content - Page</label>
    </listViews>
    <listViews>
        <fullName>Content_SubContainer</fullName>
        <columns>NAME</columns>
        <columns>Display_Name__c</columns>
        <columns>Container_Type__c</columns>
        <columns>Parent_Container__c</columns>
        <columns>Container_Level__c</columns>
        <columns>Status__c</columns>
        <columns>Reference_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Intranet_Container__c.Content_SubContainer</value>
        </filters>
        <label>Content - SubContainer</label>
    </listViews>
    <listViews>
        <fullName>Level_Child</fullName>
        <columns>NAME</columns>
        <columns>Display_Name__c</columns>
        <columns>Container_Type__c</columns>
        <columns>Parent_Container__c</columns>
        <columns>Container_Level__c</columns>
        <columns>Status__c</columns>
        <columns>Reference_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Container_Level__c</field>
            <operation>equals</operation>
            <value>Child</value>
        </filters>
        <label>Level - Child</label>
    </listViews>
    <listViews>
        <fullName>Level_Footer</fullName>
        <columns>NAME</columns>
        <columns>Display_Name__c</columns>
        <columns>Container_Type__c</columns>
        <columns>Parent_Container__c</columns>
        <columns>Container_Level__c</columns>
        <columns>Status__c</columns>
        <columns>Reference_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Container_Level__c</field>
            <operation>equals</operation>
            <value>Footer</value>
        </filters>
        <label>Level - Footer</label>
    </listViews>
    <listViews>
        <fullName>Level_Header</fullName>
        <columns>NAME</columns>
        <columns>Display_Name__c</columns>
        <columns>Container_Type__c</columns>
        <columns>Parent_Container__c</columns>
        <columns>Container_Level__c</columns>
        <columns>Status__c</columns>
        <columns>Reference_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Container_Level__c</field>
            <operation>equals</operation>
            <value>Header</value>
        </filters>
        <label>Level - Header</label>
    </listViews>
    <listViews>
        <fullName>Level_MainPage</fullName>
        <columns>NAME</columns>
        <columns>Display_Name__c</columns>
        <columns>Container_Type__c</columns>
        <columns>Parent_Container__c</columns>
        <columns>Container_Level__c</columns>
        <columns>Status__c</columns>
        <columns>Reference_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Container_Level__c</field>
            <operation>equals</operation>
            <value>MainPage</value>
        </filters>
        <label>Level - MainPage</label>
    </listViews>
    <listViews>
        <fullName>Level_Orphan</fullName>
        <columns>NAME</columns>
        <columns>Display_Name__c</columns>
        <columns>Container_Type__c</columns>
        <columns>Parent_Container__c</columns>
        <columns>Container_Level__c</columns>
        <columns>Status__c</columns>
        <columns>Reference_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Container_Level__c</field>
            <operation>equals</operation>
            <value>Orphan</value>
        </filters>
        <label>Level - Orphan</label>
    </listViews>
    <listViews>
        <fullName>Level_PageBlock</fullName>
        <columns>NAME</columns>
        <columns>Display_Name__c</columns>
        <columns>Container_Type__c</columns>
        <columns>Parent_Container__c</columns>
        <columns>Container_Level__c</columns>
        <columns>Status__c</columns>
        <columns>Reference_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Container_Level__c</field>
            <operation>equals</operation>
            <value>PageBlock</value>
        </filters>
        <label>Level - PageBlock</label>
    </listViews>
    <listViews>
        <fullName>Page</fullName>
        <columns>NAME</columns>
        <columns>Display_Name__c</columns>
        <columns>Container_Type__c</columns>
        <columns>Parent_Container__c</columns>
        <columns>Container_Level__c</columns>
        <columns>Status__c</columns>
        <columns>Reference_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Intranet_Container__c.Page</value>
        </filters>
        <label>Page</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intranet Containers</pluralLabel>
    <recordTypes>
        <fullName>Content_Fixed</fullName>
        <active>true</active>
        <description>Container designed for use with more complex Content Items where properties are more specific</description>
        <label>Content - Fixed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Content_Flexible</fullName>
        <active>true</active>
        <description>Container designed for use with Content Items which can be used in mutliple Container types</description>
        <label>Content - Flexible</label>
    </recordTypes>
    <recordTypes>
        <fullName>Content_SubContainer</fullName>
        <active>true</active>
        <description>Container designed for use with multiple other Containers of the same type related to a parent Container</description>
        <label>Content - SubContainer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Footer</fullName>
        <active>true</active>
        <description>Contains all footer containers and items</description>
        <label>Footer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Header</fullName>
        <active>true</active>
        <description>Contains all header containers and items</description>
        <label>Header</label>
    </recordTypes>
    <recordTypes>
        <fullName>Page</fullName>
        <active>true</active>
        <description>Top-level container for a Page</description>
        <label>Page</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>